# sVObjTrack

./: .gitignore  README.md  how_to_use_venv.md  rebuild.sh  run_la_grounding.sh  run_la_node.sh  run_orchestrator_node.sh  run_orchestrator_query.py  run_orchestrator_query.sh  run_yolo_node.sh
config/: la_objects.json
src/camera_nodes/: package.xml  setup.cfg  setup.py
src/camera_nodes/camera_nodes/: realsense_camera_node.py  usb_camera_node.py
src/camera_nodes/launch/: cameras.launch.py
src/locate_anything_ros2/: package.xml  setup.cfg  setup.py
src/locate_anything_ros2/locate_anything_ros2/: la_node.py
src/orchestrator/: package.xml  setup.py
src/orchestrator/orchestrator/: orchestrator_node.py
src/yolo11_ros2/: package.xml  setup.cfg  setup.py
src/yolo11_ros2/yolo11_ros2/: yolo_node.py
src/yolo26_ros2/: package.xml  setup.cfg  setup.py
src/yolo26_ros2/yolo26_ros2/: yolo_node.py
src/yolo_ros2/: package.xml  setup.cfg  setup.py  tracking_options.md
src/yolo_ros2/moe_yolo/: losses.py  moe_model.py
src/yolo_ros2/unified_yolo/: unified_model.py
src/yolo_ros2/yolo_ros2/: yolo_node.py
