<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesvenska="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>orchestrator</name>
  <version>0.0.0</version>
  <description>Orchestrator combining YOLO detection with LA queries</description>
  <maintainer email="nils.treuheit@ovgu.de">nils</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
